SERVER-88810 Fix explain for $unionWith on a sharded view (#24285)

GitOrigin-RevId: 121ef403b14d023b35b1f329896c7454a9d777b0